adding style - note cmp

--- a/src/components/Form/EventForm.sass
+++ b/src/components/Form/EventForm.sass
@@ -12,10 +12,10 @@
     border-bottom: 1px solid black
     width:100%
     &:not(#name)
-      &:focus
-        flex-direction: row-reverse
-        flex-wrap: wrap
-        text-align: end
+      // &:focus
+      //   flex-direction: row-reverse
+      //   flex-wrap: wrap
+      //   text-align: end
 
     &:focus
       box-shadow: none
