--- a/src/components/Form/EventForm.sass
+++ b/src/components/Form/EventForm.sass
@@ -1,4 +1,7 @@
 #formCard 
+  box-shadow: 2px 2px 9px 7px rgba(0, 0, 0, 0.2)
+  padding: 2%
+  width: 40%
   label
     visibility: hidden
   .input_container
@@ -25,6 +28,28 @@
       + label
         visibility: visible
 
-h1
+.title
   color: #575757
+  padding-bottom: 10px
 
+
+#header
+  border-bottom: 1px solid #F0F0F0
+
+.delete_btn
+  font-weight: bolder
+  border: 1px solid black
+  border-radius: 50%
+  width: 30%
+  &:hover
+    cursor: pointer
+
+.btn
+  border-radius: 10%
+   
+.btn_submit_able
+  background-color: linear-gradient(180deg, #2CCEB3 0%, #2CCE62 100%),
+
+.disable_btn
+  background-color: #F0F0F0
+  color: #C7C7C7
